# identicore-web

./: .gitignore  LICENSE.txt  README.md  docker-compose.yaml
api/: .dockerignore  Dockerfile  README.md  pyproject.toml  requirements.txt
api/src/: main.py  models.py  schema.py
api/src/api/: main.py  throttle.py
api/src/api/routes/core/: __init__.py  main.py  schema.py
web/: .env  Dockerfile  index.html  package.json  vite.config.ts
web/src/: api.ts  index.css  index.tsx  routes.tsx
web/src/components/: Hamster.tsx  ModeSwitcher.tsx  PhotoUpload.tsx  Results.tsx  Root.tsx  Submit.tsx
web/src/errors/: 404.tsx
web/src/lib/: identicoreTypes.ts
web/src/pages/: App.tsx
